# ntl-feedstock

recipe/: bld.bat  config.gmp.patch  meta.yaml
recipe/windows/: CMakeLists.gen_gmp_aux.txt  CMakeLists.txt  gen_gmp_aux.cpp
